[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "fedoo"
authors = [
    {name = "3MAH", email = 'set3mah@gmail.com'},
]
description = "Finite elements library"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["FEM", "Structural mechanics"]
license = {text = "GPLv3"}
classifiers = [
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Information Analysis',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Operating System :: MacOS',
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    'numpy>=1.26',
    'scipy'
]
dynamic = ["version"]

[project.optional-dependencies]
all = ['fedoo[solver,plot,dataio,test]']
solver = [
    'pypardiso ; platform_machine!="arm64" and platform_machine!="aarch64"',
    'scikit-umfpack ; platform_machine=="arm64" or platform_machine=="aarch64"'
]
plot = [
    'matplotlib',
    'pyvista[io]'
]
dataio = [
    'pandas'
]
test = [
    'pytest',
    'pytest-cov'
]
other = [
    'microgen',
    'simcoon'
]

[project.urls]
Documentation = 'https://fedoo.readthedocs.io/en/latest/'
"Bug Tracker" = 'https://github.com/3MAH/fedoo/issues'
"Source Code" = 'https://github.com/3MAH/fedoo'

[tool.setuptools.dynamic]
version = {attr = 'fedoo._version.__version__'}

[tool.setuptools.packages.find]
include = [
    'fedoo',
    'fedoo.*'
]
