[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "fedoo"
version = "0.7.0"
authors = [
    {name = "3MAH", email = 'set3mah@gmail.com'},
]
description = "Finite elements library"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["FEM", "Structural mechanics"]
license = {text = "GPLv3"}
classifiers = [
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Information Analysis',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Operating System :: MacOS',
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    'numpy>=2.00',
    'scipy',
]

[project.optional-dependencies]
all = ['fedoo[solver,plot,simcoon,test,ipc]']
ipc = ['ipctk']
solver = [
    'pypardiso ; platform_machine!="arm64" and platform_machine!="aarch64"',
    'scikit-umfpack ; platform_machine=="arm64" or platform_machine=="aarch64"'
]
plot = [
    'matplotlib',
    'pyvista[io]',
]
simcoon = [
    'simcoon'
]
test = [
    'pytest',
    'pytest-cov'
]
gui = [
    'pyvistaqt',
    'pyside6',
]
other = [
    'pandas',
    'microgen',
]

[project.urls]
Documentation = 'https://3mah.github.io/fedoo-docs/'
"Bug Tracker" = 'https://github.com/3MAH/fedoo/issues'
"Source Code" = 'https://github.com/3MAH/fedoo'

[tool.setuptools.packages.find]
include = [
    'fedoo',
    'fedoo.*'
]
